POS tag matching in W2V